<resources>
    <string name="app_name">ML For All</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="item_create_machine_learning_model">Create ML Model</string>
    <string name="item_login_logout">Login/Logout</string>
    <string name="item_my_models">My Models</string>
    <string name="item_my_profile">My Profile</string>
    <string name="item_about">About</string>
    <string name="welcome_greet">Welcome!</string>
    <string name="go_home">Go Home</string>
    <string name="load_file">Load File</string>
    <string name="choose_columns">Please Choose X Column and Y Column</string>
    <string name="start">Start!</string>
    <string name="slope">Slope:</string>
    <string name="intercept">Intercept:</string>
    <string name="test_my_model">Test My Model!</string>
    <string name="model_score">Model Score:</string>
    <string name="show_my_model">Show My Model!</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login!</string>

    <string name="about"><![CDATA[This is an application that enables you to build simple Machine Learning Models without the need of background knowledge in this subject.
    You can use the app very easily and build Machine Learning Models for free.\n
    Creator: Tomer Reiner\n
    Version: 1.1.4\n
    Release Date: 12.05.2021\n
    Source Code Link:]]> <a href="https://github.com/TomerReiner/ML-For-All">ML For All</a>
    </string>

    <string name="login_warning">You have to be logged in to view your models.
        Please move to any other screen using the navigation menu,
        log in to your account and come back to this screen.</string>
    <string name="reset">Reset</string>
    <string name="tutorial">Tutorial:</string>

    <string name="login_note">Note: Please login to your account or create a new one to be able to use this screen.</string>

    <string name="enter_the_name_of_the_csv_file">Enter the name of your CSV file:</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_exclamation_mark">Sign Up!</string>
    <string name="retype_password">Retype Password:</string>
    <string name="don_t_have_an_account_sign_up_now">Don\'t have an account? Sign up now!</string>

    <string name="my_profile_note"><bold><big>Note: If you are not logged in to your account, this message will appear:</big></bold></string>
    <string name="confirm">Confirm</string>
    <string name="retype_your_password">Retype Your Password:</string>
    <string name="are_you_sure_you_want_to_delete_your_ml_models">Are you sure you want to delete your ML Models?</string>
    <string name="type_your_password">Type Your Password:</string>
    <string name="change_your_password">Change Your Password:</string>
    <string name="type_your_new_password">Type Your New Password:</string>
    <string name="retype_your_new_password">Retype Your New Password:</string>
    <string name="type_your_old_password">Type Your Old Password:</string>
    <string name="are_you_sure_you_want_to_delete_your_account">Are you sure you want to delete your account?</string>
    <string name="type_your_new_username">Type Your New Username:</string>
    <string name="retype_your_new_username">Retype Your New Username:</string>
    <string name="change_your_username">Change Your Username:</string>
    <string name="change_password">Change Password</string>
    <string name="delete_my_ml_models">Delete My ML Models</string>
    <string name="delete_my_account">Delete My Account</string>

<!--    Tutorial section-->

    <string name="general_tutorial"><![CDATA[
       This tutorial will guide you through the app and will show you how to use it.\n
    First, your Android version must be lower than Android 11.\n
    After that, you need to move the CSV files you want to use into the Downloads Directory in the Documents Directory or the Downloads Directory or the Downloads Directory in the SD Card.\n
    All right, we are ready to continue!]]>
    </string>

    <string name="navigation_instructions"><![CDATA[
        When you open the app, the tutorial screen will show up.\n
        On the top-left of the screen, there is a navigation menu.]]>
    </string>

    <string name="login_instructions">
        To use the app, you must first create an account. To create an account, please press the icon on the menu that says: "Login/Logout".
    </string>


    <string name="logged_in_case_instructions">
        If there is a connected account to the app right now, that user will be logged of the app out automatically.
        Then, a notification will notify you that the user was logged out of the app. After that, press again on this icon.
    </string>

    <string name="already_has_account_instructions">
         If you already have an account, log in to your account in this dialog.
    </string>

    <string name="open_sign_up_dialog_instructions">
        If you do not have an account, click the button on the bottom of the dialog. A new dialog will open.
    </string>

    <string name="username_instructions"><![CDATA[
        In this dialog, enter your username and password. A valid username can only include English letters, digits, and an underscore(_).\n
        A Valid username has to include at least one letter and has to begin with a letter or an underscore.\n
        A valid password can only include English letters, digits, and special characters.\n
        After filling all the fields in the dialog, click the \"Sign Up!\" button. If the sign-up process is successful, the dialog will close.\n
        If the sign-up process fails, a notification will pop up.
        If your username is invalid, change it to match the valid username pattern I mentioned.\n
        If your username is taken by someone else, try another one.\n
        After setting up the account, you are ready to use the app!]]>
    </string>

    <string name="menu_instructions"><![CDATA[
        If you press on the first item of the menu (the one that says: \"Go Home\"), the app will redirect you to the tutorial.\n
        If you press the second item on the menu(the one that says: \"Create ML Model\"), you will be redirected to the second screen of the app, the main screen.
        In that screen, you will load your files and create Machine Learning Models. We will discuss about this screen later.\n
        If you press the third item on the menu(the one that says: \"My Models\"), you will be redirected to a screen where you will see all your ML Models.\n
        If you press the fourth item on the menu(the one that says: \"My Profile\"), a screen with your profile\'s info will open. On this screen, you will be able to change your username, password, delete your data and even delete your account.\n
        If you press the fifth item on the menu(the one that says: \"Login/Logout\"), the login dialog will open.\n
        If you press the sixth item in the menu(the one that says: \"About\"), a screen with information about the app will open.]]>
    </string>

    <string name="important_note"><bold><big><![CDATA[
        Note: You must login to your account to use the app\'s features.]]></big></bold>
    </string>

    <string name="create_ml_model"><big><bold>Create ML(Machine Learning) Models</bold></big></string>

    <string name="enter_file_name"><![CDATA[
        Please enter the file\'s name with or without the file extension(.csv) and press \"Load File\".\n
        There has to be the same amount of items in each row in the file, and there has to be the same amount of rows in each column.
        All the values in the file must be filled except for one case:
        If there are empty values in the first row(except for the last value), which is the columns row,
         the empty values will be labeled as their index in the row.]]>
        <big><bold>Note: You have to grant the app permission to read files.</bold></big>
    </string>

    <string name="choose_columns_instructions"><![CDATA[
        Then, choose your X column and Y column and hit \"Start!\".\n
        When you hit start, the data will be shuffled and divided into training and testing data.\n
        The model will be built on the training data and tested on the testing data.]]>
    </string>

    <string name="model_processing_instructions"><![CDATA[
        After that, the slope and the intercept of the model will show. The app builds a simple 2D linear equation of this form:\n
        y = m * x + b\n
        or\n
        y = slope * x + intercept\n
        Then, hit \"Test My Model!\". The model\'s score on the testing data will appear.\n
        If the model\'s score is negative, then the model failed to fit the data.\n
        After that, hit \"Show My Model!\". You will be redirected to a screen where your model will be displayed on a graph.
        If you have too large values(values greater than 100) or too small values(values smaller than -100) in your dataset,
        the data points from the dataset won\'t appear on the graph. If there are more than 10 data points in the training data and more than 10 data points in the testing data,
        only the first ten data points of the training data and the first ten data points of the testing data will appear on the graph.]]>
    </string>

    <string name="graph_instructions">
        To leave the graph, click the return button on your phone.
    </string>

    <string name="reset_instructions"><![CDATA[
        To reset the model building process, hit \"Reset\".]]>
    </string>

    <string name="my_models"><bold><big>My Models</big></bold></string>

    <string name="my_models_instructions">
        On this screen, you will be able to see all your model. Every model consists of a slope, an intercept, and a score.
        </string>

    <string name="load_model_on_graph">To view a model on a graph, click the desired model.
        On the graph, you will see the linear equation of the model.</string>

    <string name="delete_model">To delete a model, click for a second on the model.</string>

    <string name="my_models_note"><big><bold>Note: On this screen, you cannot login/logout from your account.
        If you are not logged in to your account, this message will appear:</bold></big></string>

    <string name="my_profile"><big><bold>My Profile:</bold></big></string>

    <string name="my_profile_instructions"><![CDATA[On this screen, you will be able to view your profile\'s information,
        change your username and password, delete all of your ML Models and even delete your account.
        For security, you have to type your password every time you commit changes in your profile.
        When you press one of the buttons on this screen, a dialog will open. You have to follow the dialog instructions to complete the desired action.]]></string>

    <string name="secret_feature_clue">There is a secret feature on one of the app\'s screens. Try to find it!</string>

    <string name="enjoy_the_app">Enjoy The App!</string>
</resources>