<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvChangePasswordDialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/change_your_password"
        android:textAlignment="center"
        android:textColor="#FD0000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etChangePasswordNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/happy_monkey"
        android:hint="@string/type_your_new_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etChangePasswordRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/happy_monkey"
        android:hint="@string/retype_your_new_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etChangePasswordOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/happy_monkey"
        android:hint="@string/type_your_old_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnChangePasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textSize="20sp" />


</LinearLayout>