<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvDeleteAccountDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/are_you_sure_you_want_to_delete_your_account"
        android:textAlignment="center"
        android:textColor="#FF0000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etDeleteAccountPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:fontFamily="@font/happy_monkey"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etDeleteAccountRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/happy_monkey"
        android:hint="@string/retype_your_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btnDeleteAccountConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_shape"
        android:fontFamily="@font/happy_monkey"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="#FF0000"
        android:textSize="25sp"/>

</LinearLayout>